# larixon_test

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
entrypoints/: django_server.sh  worker.sh
src/: .envExample
src/advert/: admin.py  models.py  urls.py
src/advert/routes/: advert_routes.py  category_routes.py  city_routes.py
src/advert/serializers/: advert_serializer.py  category_serializer.py
src/advert/services/: advert_service.py
src/advert/tasks/: increment_views.py
src/advert/views/: advert.py  category.py  city.py
src/common/: exceptions.py  models.py
src/config/: urls.py
src/config/settings/: base.py  cors.py  dev.py  production.py
